# WowAdv

./: .gitignore  README.rst  manage.py  pyproject.toml  requirements.txt  todo.txt
aWowAdv/: asgi.py  settings.py  urls.py  wsgi.py
members/: allauth.py  filters.py  forms.py  urls.py  views.py
members/templatetags/: member_profile.py
static/img/: card_bg.avif  header_bg.avif  header_bg_tile.avif  horde_leather_bg.avif  subscribe_bg.avif
static/styles/: general.css  regLogin.css
templates/: defaultAccountLayout.html  defaultLayout.html
templates/account/: email_confirmation_message.txt  login.html  verification_sent.html
templates/mailing/: notify_adv_creator_about_response_added.html  response_status_notification.html  weekly_notification.html
templates/members/: change_password.html  password_success.html  profile.html  profile_edit.html  response_search.html
templates/theWow/: adv_create.html  adv_delete.html  adv_detail.html  adv_view.html  index.html  response_create.html  view_adv.html
theWowAdv/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
theWowAdv/migrations/: 0001_initial.py  0002_alter_advertisement_options_advertisement_category_and_more.py  0002_response_title_alter_advertisement_body_and_more.py  0003_rename_responseadvertisement_response_advert.py  0004_alter_response_approved_alter_response_text_and_more.py  0005_rename_approved_response_isapproved.py  0006_subscription.py  0007_alter_subscription_name.py  0008_alter_subscription_user.py  0009_newslettersubscribedusers.py  0010_rename_subscription_categorysubscription.py  (+2 more)
(+7 files in other folders)
